# urbanemissions

./: README.md  pyproject.toml
backend/: app.py  models.py  rag.py
chroma_db/5815736b-9cb3-42f3-8388-0defcfffa223/: index_metadata.pickle
data/extracted/: urbanemissions_info.json  urbanemissions_info_about_ueinfo.json  urbanemissions_info_air_quality_forecasts.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_ahmedabad_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_aldona_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_bengaluru_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_chandigarh_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_chennai_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_hyderabad_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_indore_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_kampala_uganda.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_kolkata_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_ludhiana_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_mumbai_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_patna_india.json  urbanemissions_info_air_quality_forecasts_air_quality_forecasts_pune_india.json  (+165 more)
frontend/: index.html
indexer/: chunker.py  embed.py
scraper/: crawl.py  extract.py
scripts/: run_pipeline.py
(+189 files in other folders)
